--- a/thermal-motion-concept.html
+++ b/thermal-motion-concept.html
@@ -14,12 +14,9 @@
         <header id="banner" class="body">
                 <h1><a href="/">Leon's blog  <strong>读书写字、观察世界的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="/pages/contact.html">关于</a></li>
-                    <li><a href="/pages/muse.html">闲谈·静思</a></li>
-                    <li><a href="/pages/practice.html">践行·为之</a></li>
-                    <li class="active"><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/pages/about.html">关于</a></li>
                     <li><a href="/category/pythonbian-cheng.html">Python·编程</a></li>
-                    <li><a href="/category/wu-li-ke-ji.html">物理·科技</a></li>
+                    <li class="active"><a href="/category/wu-li-ke-ji.html">物理·科技</a></li>
                     <li><a href="/category/xian-qu-ren-wen.html">闲趣·人文</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -44,7 +41,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="/author/leon.html">Leon</a>
         </address>
-<p>In <a href="/category/misc.html">misc</a>.</p>
+<p>In <a href="/category/wu-li-ke-ji.html">物理·科技</a>.</p>
 <p>tags: <a href="/tag/physics.html">physics</a> </p>
 </footer><!-- /.post-info -->      <p>写在前面的话：这是我作为2014年秋季学期《普通物理（B）II》课程助教时，写给非物理系本科生的一个注解，或者说与大家分享的思考。教材是北京大学出版社《大学通用教程·热学》，这篇短文在学习完第二章后，写在Practice一栏中，拟定的题目本来是《从“物质分子处于不停顿的无规则的运动状态”到热平衡态的统计分布律》，但是显得太长了，所以减缩成《浅析热运动》。</p>
 <hr />
@@ -65,9 +62,6 @@
 <p>&emsp;&emsp;说了这么多，或许还有极少数人继续追问，为什么这个世界是统计规律的，或者泄气地说，世界干嘛要弄成这样！好吧，这时候我的思考是这样的，物理学家尽可能地解释世界的深层次内涵，但是有些问题已经超出了科学的边界，有待哲学家做出他们的贡献。很多时候我们如同身处柏拉图的“洞穴”，对外面世界的了解未必是一手资料，得到的理论只是要让所有的观察自洽。物理学家们努力告诉我们是什么，不一定有能力告诉我们为什么。量子力学的出现把人类的理解能推到边缘，对一些问题丧失了具象能力，量子力学的大师也教导我们“闭嘴，只管算”（不要问为什么）。但是，人类就是在某些个体不断追问为什么的过程中，向前发展。与锁在洞穴里的人不同，我们是自由的。</p>
 <p>&emsp;&emsp;这就是我从“物质分子处于不停顿的无规则的运动”出发，对第二章统计分布律内容的注解，虽然不是直接解析公式，但希望能加深大家的认识。</p>
 <p>:) 如有不妥之处，请联系我。</p>
-<blockquote>
-<p>Last Modified: 2014-10-11</p>
-</blockquote>
 <script type="text/javascript">if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
     var align = "center",
         indent = "0em",
