--- a/unnamed-peom.html
+++ b/unnamed-peom.html
@@ -14,13 +14,10 @@
         <header id="banner" class="body">
                 <h1><a href="/">Leon's blog  <strong>读书写字、观察世界的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="/pages/contact.html">关于</a></li>
-                    <li><a href="/pages/muse.html">闲谈·静思</a></li>
-                    <li><a href="/pages/practice.html">践行·为之</a></li>
-                    <li class="active"><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/pages/about.html">关于</a></li>
                     <li><a href="/category/pythonbian-cheng.html">Python·编程</a></li>
                     <li><a href="/category/wu-li-ke-ji.html">物理·科技</a></li>
-                    <li><a href="/category/xian-qu-ren-wen.html">闲趣·人文</a></li>
+                    <li class="active"><a href="/category/xian-qu-ren-wen.html">闲趣·人文</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -40,13 +37,13 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="/author/leon.html">Leon</a>
         </address>
-<p>In <a href="/category/misc.html">misc</a>.</p>
+<p>In <a href="/category/xian-qu-ren-wen.html">闲趣·人文</a>.</p>
 <p>tags: <a href="/tag/muse.html">muse</a> <a href="/tag/essay.html">essay</a> <a href="/tag/poetry.html">poetry</a> </p>
 </footer><!-- /.post-info -->      
 
 <p>题注：前天晚上，翻到几首小诗，誊抄在这。只有第一首有题目，其他几乎都是以类似于“燕园速写”为题，故皆集于此。以“未名”为题也妥当，切情切景，园子里是流传着一句诗文的：未名湖是个海洋，诗人都藏在水底。我虽然不能成为诗人，但谁也不能阻止我瞎写啊。另外，此页的存在也有助于我寻找那些曾经遗失的文字
 。</p>
-<p>&emsp;&emsp;——错过的人，像写过的诗</p>
+<p>&emsp;&emsp;——诗酒趁年华</p>
 <p><br /></p>
 <p>《未名·桃花雪》，2013-03-21</p>
 <p>&emsp;&emsp;料峭寒，风欲暖，端坐清池闲。弄冰镜，露态寒，红粉初上，独自莫凭栏。</p>
@@ -60,9 +57,6 @@
 <p><br /></p>
 <p>《夜寄思》，2014-08-20</p>
 <p>&emsp;&emsp;风对清露饮，月动影孤行。非是思人故？一夜听蝉鸣。</p>
-<p><br /></p>
-<p>《或非偶得》，2015-06-10</p>
-<p>&emsp;&emsp;一切都已停止/不是死寂/而是冰凝/堵住的宣泄口/挣扎的心/在苦楚的泪水中/滋润，新生</p>
     </div><!-- /.entry-content -->
 
   </article>
