--- a/archives.html
+++ b/archives.html
@@ -14,10 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">Leon's blog  <strong>读书写字、观察世界的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="/pages/contact.html">关于</a></li>
-                    <li><a href="/pages/muse.html">闲谈·静思</a></li>
-                    <li><a href="/pages/practice.html">践行·为之</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/pages/about.html">关于</a></li>
                     <li><a href="/category/pythonbian-cheng.html">Python·编程</a></li>
                     <li><a href="/category/wu-li-ke-ji.html">物理·科技</a></li>
                     <li><a href="/category/xian-qu-ren-wen.html">闲趣·人文</a></li>
@@ -28,15 +25,11 @@
 
 <dl>
     <dt>2015-09-26</dt>
-    <dd><a href="/peom-suzhou.html">旅行的诗（苏州-上海-青岛）</a></dd>
-    <dt>2015-08-30</dt>
-    <dd><a href="/tkinter-gui.html">Tkinter GUI编程实践与入门指南</a></dd>
+    <dd><a href="/peom-suzhou.html">旅行的诗 1</a></dd>
     <dt>2015-08-25</dt>
     <dd><a href="/liquid-nitrogen-ice-cream.html">液氮冰淇淋制作大法</a></dd>
     <dt>2015-08-24</dt>
     <dd><a href="/data-preview-release.html">Data Preview v0.1 released</a></dd>
-    <dt>2015-07-25</dt>
-    <dd><a href="/quantitative-investing.html">量化投资与Python</a></dd>
     <dt>2015-07-22</dt>
     <dd><a href="/is-the-world-understandable.html">不确定性与不可知论</a></dd>
     <dt>2015-07-18</dt>
@@ -47,8 +40,6 @@
     <dd><a href="/thermal-motion-concept.html">浅析热运动</a></dd>
     <dt>2014-10-08</dt>
     <dd><a href="/markdown-and-latex-equation-handbook.html">Markdown语法和LaTeX数学记号速查手册</a></dd>
-    <dt>2014-10-04</dt>
-    <dd><a href="/this-blog.html">This blog</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
