--- a/tags.html
+++ b/tags.html
@@ -14,10 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">Leon's blog  <strong>读书写字、观察世界的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="/pages/contact.html">关于</a></li>
-                    <li><a href="/pages/muse.html">闲谈·静思</a></li>
-                    <li><a href="/pages/practice.html">践行·为之</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/pages/about.html">关于</a></li>
                     <li><a href="/category/pythonbian-cheng.html">Python·编程</a></li>
                     <li><a href="/category/wu-li-ke-ji.html">物理·科技</a></li>
                     <li><a href="/category/xian-qu-ren-wen.html">闲趣·人文</a></li>
@@ -28,20 +25,17 @@
     <h1>Tags for Leon's blog</h1>
     <ul>
         <li><a href="/tag/essay.html">essay</a> (2)</li>
-        <li><a href="/tag/finance.html">finance</a> (1)</li>
-        <li><a href="/tag/gui.html">GUI</a> (2)</li>
+        <li><a href="/tag/gui.html">GUI</a> (1)</li>
         <li><a href="/tag/latex.html">laTeX</a> (1)</li>
         <li><a href="/tag/life.html">life</a> (1)</li>
         <li><a href="/tag/markdown.html">markdown</a> (1)</li>
         <li><a href="/tag/muse.html">muse</a> (3)</li>
-        <li><a href="/tag/numerical.html">numerical</a> (2)</li>
-        <li><a href="/tag/pelican.html">pelican</a> (1)</li>
+        <li><a href="/tag/numerical.html">numerical</a> (1)</li>
         <li><a href="/tag/physcics.html">physcics</a> (1)</li>
         <li><a href="/tag/physics.html">physics</a> (4)</li>
         <li><a href="/tag/poetry.html">poetry</a> (2)</li>
-        <li><a href="/tag/python.html">python</a> (4)</li>
+        <li><a href="/tag/python.html">python</a> (2)</li>
         <li><a href="/tag/scipy.html">scipy</a> (1)</li>
-        <li><a href="/tag/tkinter.html">tkinter</a> (1)</li>
     </ul>
 </section>
 
