--- a/why-physicist-need-python.html
+++ b/why-physicist-need-python.html
@@ -14,10 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">Leon's blog  <strong>读书写字、观察世界的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="/pages/contact.html">关于</a></li>
-                    <li><a href="/pages/muse.html">闲谈·静思</a></li>
-                    <li><a href="/pages/practice.html">践行·为之</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
+                    <li><a href="/pages/about.html">关于</a></li>
                     <li><a href="/category/pythonbian-cheng.html">Python·编程</a></li>
                     <li class="active"><a href="/category/wu-li-ke-ji.html">物理·科技</a></li>
                     <li><a href="/category/xian-qu-ren-wen.html">闲趣·人文</a></li>
