add new post about L-B formula

--- a/this-blog.html
+++ b/this-blog.html
@@ -86,7 +86,7 @@
 </pre></div>
 
 
-<p>希望支持Ipython/Jupyter Notebook，使用<a href="https://github.com/danielfrg/pelican-ipynb" target="_blank">pelican-ipynb</a>插件。</p>
+<p>希望支持Ipython/Jupyter Notebook，使用<a href="https://github.com/getpelican/pelican-plugins/tree/master/liquid_tags" target="_blank">liquid_tags</a>插件或者<a href="https://github.com/danielfrg/pelican-ipynbs" target="_blank">pelican-ipynb</a>。</p>
     </div><!-- /.entry-content -->
 
   </article>
