--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
 <h1>Archives for Leon's blog</h1>
 
 <dl>
+    <dt>2016-06-14</dt>
+    <dd><a href="/landauer-buttiker.html">Landauer-Buttiker公式与S矩阵</a></dd>
     <dt>2015-09-26</dt>
     <dd><a href="/peom-suzhou.html">旅行的诗</a></dd>
     <dt>2015-08-25</dt>
