--- a/authors.html
+++ b/authors.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>Leon's blog - Authors</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="http://www.domuse.com/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,19 +12,19 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
+                <h1><a href="http://www.domuse.com/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="/pages/about.html">About</a></li>
-                    <li><a href="/category/muse.html">Muse</a></li>
-                    <li><a href="/category/physics.html">Physics</a></li>
-                    <li><a href="/category/python.html">Python</a></li>
+                    <li><a href="http://www.domuse.com/pages/about.html">About</a></li>
+                    <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
+                    <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
+                    <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Leon's blog</h1>
     <ul>
-        <li><a href="/author/leon.html">Leon</a> (10)</li>
+        <li><a href="http://www.domuse.com/author/leon.html">Leon</a> (10)</li>
     </ul>
 </section>
 
@@ -62,5 +62,14 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+<script type="text/javascript">
+    var disqus_shortname = 'leonpelican';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 </body>
 </html>
