--- a/tags.html
+++ b/tags.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>Leon's blog - Tags</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="http://www.domuse.com/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,31 +12,31 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
+                <h1><a href="http://www.domuse.com/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="/pages/about.html">About</a></li>
-                    <li><a href="/category/muse.html">Muse</a></li>
-                    <li><a href="/category/physics.html">Physics</a></li>
-                    <li><a href="/category/python.html">Python</a></li>
+                    <li><a href="http://www.domuse.com/pages/about.html">About</a></li>
+                    <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
+                    <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
+                    <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for Leon's blog</h1>
+    <h1>Leon's blog 全部标签</h1>
     <ul>
-        <li><a href="/tag/essay.html">essay</a> (2)</li>
-        <li><a href="/tag/gui.html">GUI</a> (1)</li>
-        <li><a href="/tag/latex.html">laTeX</a> (1)</li>
-        <li><a href="/tag/life.html">life</a> (1)</li>
-        <li><a href="/tag/markdown.html">markdown</a> (1)</li>
-        <li><a href="/tag/muse.html">muse</a> (3)</li>
-        <li><a href="/tag/numerical.html">numerical</a> (1)</li>
-        <li><a href="/tag/pelican.html">pelican</a> (1)</li>
-        <li><a href="/tag/physcics.html">physcics</a> (1)</li>
-        <li><a href="/tag/physics.html">physics</a> (5)</li>
-        <li><a href="/tag/poetry.html">poetry</a> (2)</li>
-        <li><a href="/tag/python.html">python</a> (3)</li>
-        <li><a href="/tag/scipy.html">scipy</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/essay.html">essay</a> (2)</li>
+        <li><a href="http://www.domuse.com/tag/gui.html">GUI</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/latex.html">laTeX</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/life.html">life</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/markdown.html">markdown</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/muse.html">muse</a> (3)</li>
+        <li><a href="http://www.domuse.com/tag/numerical.html">numerical</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/pelican.html">pelican</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/physcics.html">physcics</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/physics.html">physics</a> (5)</li>
+        <li><a href="http://www.domuse.com/tag/poetry.html">poetry</a> (2)</li>
+        <li><a href="http://www.domuse.com/tag/python.html">python</a> (3)</li>
+        <li><a href="http://www.domuse.com/tag/scipy.html">scipy</a> (1)</li>
     </ul>
 </section>
 
@@ -74,5 +74,14 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
     </script>
+<script type="text/javascript">
+    var disqus_shortname = 'leonpelican';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 </body>
 </html>
