--- a/pages/404.html
+++ b/pages/404.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>404 PAGE NOT FOUND</title>
-        <link rel="stylesheet" href="http://www.domuse.com/theme/css/main.css" />
+        <link rel="stylesheet" href="http://localhost:8000/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,12 +12,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://www.domuse.com/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
+                <h1><a href="http://localhost:8000/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
                 <nav><ul>
-                    <li><a href="http://www.domuse.com/pages/about.html">About</a></li>
-                    <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
-                    <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
-                    <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
+                    <li><a href="/archives.html">Archive</a></li>
+                    <li><a href="http://localhost:8000/pages/about.html">About</a></li>
+                    <li><a href="http://localhost:8000/category/muse.html">Muse</a></li>
+                    <li><a href="http://localhost:8000/category/physics.html">Physics</a></li>
+                    <li><a href="http://localhost:8000/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -31,7 +32,7 @@
                 <div class="blogroll">
                         <h2>links</h2>
                         <ul>
-                            <li><a href="http://python.org/">Python</a></li>
+                            <li><a href="http://www.domuse.com/">DoMuse</a></li>
                             <li><a href="http://scipy.org/">Scipy.org</a></li>
                             <li><a href="http://sciencefan.org/">ScienceFan</a></li>
                         </ul>
