--- a/archives.html
+++ b/archives.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <title>Leon's blog</title>
-        <link rel="stylesheet" href="http://localhost:8000/theme/css/main.css" />
+        <link rel="stylesheet" href="http://www.domuse.com/theme/css/main.css" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -12,13 +12,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://localhost:8000/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
+                <h1><a href="http://www.domuse.com/">Leon's blog  <strong>读书写字和思考的地方</strong></a></h1>
                 <nav><ul>
                     <li><a href="/archives.html">Archive</a></li>
-                    <li><a href="http://localhost:8000/pages/about.html">About</a></li>
-                    <li><a href="http://localhost:8000/category/muse.html">Muse</a></li>
-                    <li><a href="http://localhost:8000/category/physics.html">Physics</a></li>
-                    <li><a href="http://localhost:8000/category/python.html">Python</a></li>
+                    <li><a href="http://www.domuse.com/pages/about.html">About</a></li>
+                    <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
+                    <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
+                    <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -26,25 +26,25 @@
 
 <dl>
     <dt>2016-06-14</dt>
-    <dd><a href="http://localhost:8000/landauer-buttiker.html">Landauer-Buttiker公式与S矩阵</a></dd>
+    <dd><a href="http://www.domuse.com/landauer-buttiker.html">Landauer-Buttiker公式与S矩阵</a></dd>
     <dt>2015-09-26</dt>
-    <dd><a href="http://localhost:8000/peom-suzhou.html">旅行的诗</a></dd>
+    <dd><a href="http://www.domuse.com/peom-suzhou.html">旅行的诗</a></dd>
     <dt>2015-08-25</dt>
-    <dd><a href="http://localhost:8000/liquid-nitrogen-ice-cream.html">液氮冰淇淋制作</a></dd>
+    <dd><a href="http://www.domuse.com/liquid-nitrogen-ice-cream.html">液氮冰淇淋制作</a></dd>
     <dt>2015-08-24</dt>
-    <dd><a href="http://localhost:8000/data-preview-release.html">Data Preview v0.1 released</a></dd>
+    <dd><a href="http://www.domuse.com/data-preview-release.html">Data Preview v0.1 released</a></dd>
     <dt>2015-07-22</dt>
-    <dd><a href="http://localhost:8000/is-the-world-understandable.html">不确定性与不可知论</a></dd>
+    <dd><a href="http://www.domuse.com/is-the-world-understandable.html">不确定性与不可知论</a></dd>
     <dt>2015-07-18</dt>
-    <dd><a href="http://localhost:8000/unnamed-peom.html">未名的诗</a></dd>
+    <dd><a href="http://www.domuse.com/unnamed-peom.html">未名的诗</a></dd>
     <dt>2014-10-13</dt>
-    <dd><a href="http://localhost:8000/why-physicist-need-python.html">Why physics students and physicists need python?</a></dd>
+    <dd><a href="http://www.domuse.com/why-physicist-need-python.html">Why physics students and physicists need python?</a></dd>
     <dt>2014-10-11</dt>
-    <dd><a href="http://localhost:8000/thermal-motion-concept.html">浅析热运动</a></dd>
+    <dd><a href="http://www.domuse.com/thermal-motion-concept.html">浅析热运动</a></dd>
     <dt>2014-10-08</dt>
-    <dd><a href="http://localhost:8000/markdown-and-latex-equation-handbook.html">Markdown语法和LaTeX数学记号速查手册</a></dd>
+    <dd><a href="http://www.domuse.com/markdown-and-latex-equation-handbook.html">Markdown语法和LaTeX数学记号速查手册</a></dd>
     <dt>2014-10-04</dt>
-    <dd><a href="http://localhost:8000/this-blog.html">Pelican静态博客架设</a></dd>
+    <dd><a href="http://www.domuse.com/this-blog.html">Pelican静态博客架设</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
