add redis and backtester entries

--- a/archives.html
+++ b/archives.html
@@ -19,12 +19,17 @@
                     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
                     <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
                     <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
+                    <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Leon's blog 文章归档</h1>
 
 <dl>
+    <dt>2016-11-10</dt>
+    <dd><a href="http://www.domuse.com/quant-backtester.html">量化回测框架</a></dd>
+    <dt>2016-11-03</dt>
+    <dd><a href="http://www.domuse.com/learn-redis.html">Redis入门实践</a></dd>
     <dt>2016-06-14</dt>
     <dd><a href="http://www.domuse.com/landauer-buttiker.html">Landauer-Buttiker公式与S矩阵</a></dd>
     <dt>2015-09-26</dt>
