--- a/authors.html
+++ b/authors.html
@@ -19,13 +19,14 @@
                     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
                     <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
                     <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
+                    <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Leon's blog</h1>
     <ul>
-        <li><a href="http://www.domuse.com/author/leon.html">Leon</a> (10)</li>
+        <li><a href="http://www.domuse.com/author/leon.html">Leon</a> (12)</li>
     </ul>
 </section>
 
