--- a/categories.html
+++ b/categories.html
@@ -19,12 +19,14 @@
                     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
                     <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
                     <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
+                    <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
     <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
     <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
+    <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
