--- a/tags.html
+++ b/tags.html
@@ -19,12 +19,14 @@
                     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
                     <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
                     <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
+                    <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Leon's blog 全部标签</h1>
     <ul>
+        <li><a href="http://www.domuse.com/tag/backtest.html">backtest</a> (1)</li>
         <li><a href="http://www.domuse.com/tag/essay.html">essay</a> (2)</li>
         <li><a href="http://www.domuse.com/tag/gui.html">GUI</a> (1)</li>
         <li><a href="http://www.domuse.com/tag/latex.html">laTeX</a> (1)</li>
@@ -36,7 +38,9 @@
         <li><a href="http://www.domuse.com/tag/physcics.html">physcics</a> (1)</li>
         <li><a href="http://www.domuse.com/tag/physics.html">physics</a> (5)</li>
         <li><a href="http://www.domuse.com/tag/poetry.html">poetry</a> (2)</li>
-        <li><a href="http://www.domuse.com/tag/python.html">python</a> (3)</li>
+        <li><a href="http://www.domuse.com/tag/python.html">python</a> (4)</li>
+        <li><a href="http://www.domuse.com/tag/quant.html">quant</a> (1)</li>
+        <li><a href="http://www.domuse.com/tag/redis.html">redis</a> (1)</li>
         <li><a href="http://www.domuse.com/tag/scipy.html">scipy</a> (1)</li>
     </ul>
 </section>
