rearrange the categories

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,10 +16,10 @@
                 <nav><ul>
                     <li><a href="/archives.html">Archive</a></li>
                     <li class="active"><a href="http://www.domuse.com/pages/about.html">About</a></li>
+                    <li><a href="http://www.domuse.com/category/coding.html">Coding</a></li>
                     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
-                    <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
-                    <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
                     <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
+                    <li><a href="http://www.domuse.com/category/science.html">Science</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -32,10 +32,10 @@
 <hr />
 <h2>博文分类</h2>
 <ul>
-<li>Physics：物理及其他自然科学的话题</li>
-<li>Python：关于Python编程的好玩的事</li>
-<li>Muse：意趣、闲思和杂七杂八的东西</li>
-<li>Quant: 量化投资沉思与总结</li>
+<li>Science：物理及其他自然科学 (自然的语言)</li>
+<li>Coding：Python编程和其他 (机器的语言)</li>
+<li>Muse：意趣、闲思、杂七杂八 (人的语言)</li>
+<li>Quant: 量化投资的“矿”与“坑” (信息流的应用)</li>
 </ul>
 <p>翻阅博客：<a href="/archives.html">文章归档</a> <a href="/tags.html">话题标签</a></p>
 <h2>积跬步，行万里</h2>
@@ -44,7 +44,7 @@
 <p>计划：台湾-</p>
 <h2>书里人生在闲庭</h2>
 <p>&emsp;&emsp;——养心莫若寡欲，至乐无如读书。</p>
-<p>很懒，好久不更新书单，索性删掉咯。</p>
+<p>近期书单：《数学之美》</p>
 </section>
         <section id="extras" class="body">
                 <div class="blogroll">
