--- a/categories.html
+++ b/categories.html
@@ -16,17 +16,17 @@
                 <nav><ul>
                     <li><a href="/archives.html">Archive</a></li>
                     <li><a href="http://www.domuse.com/pages/about.html">About</a></li>
+                    <li><a href="http://www.domuse.com/category/coding.html">Coding</a></li>
                     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
-                    <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
-                    <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
                     <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
+                    <li><a href="http://www.domuse.com/category/science.html">Science</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="http://www.domuse.com/category/coding.html">Coding</a></li>
     <li><a href="http://www.domuse.com/category/muse.html">Muse</a></li>
-    <li><a href="http://www.domuse.com/category/physics.html">Physics</a></li>
-    <li><a href="http://www.domuse.com/category/python.html">Python</a></li>
     <li><a href="http://www.domuse.com/category/quant.html">Quant</a></li>
+    <li><a href="http://www.domuse.com/category/science.html">Science</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
