new post about quant-data

--- a/exclude-right.html
+++ b/exclude-right.html
@@ -4,17 +4,17 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://www.domuse.com/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://www.domuse.com/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="http://www.domuse.com/theme/font-awesome/css/font-awesome.min.css">
-
-
-    <link href="http://www.domuse.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Leon's blog Atom">
+  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link rel="shortcut icon" href="http://www.domuse.com/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="http://www.domuse.com/images/favicon.ico" type="image/x-icon">
+    <link href="http://localhost:8000/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Leon's blog Atom">
+
+
+    <link rel="shortcut icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="http://localhost:8000/images/favicon.ico" type="image/x-icon">
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,32 +30,38 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <meta name="author" content="Leon" />
-    <meta name="description" content="" />
+<meta name="author" content="Leon" />
+<meta name="description" content="" />
+<meta name="keywords" content="quant, stock">
 <meta property="og:site_name" content="Leon's blog"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="Leon's blog"/>
+<meta property="og:title" content="股票的除权和复权"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://www.domuse.com"/>
-<meta property="og:image" content="http://www.domuse.com/images/leon.png">
+<meta property="og:url" content="http://localhost:8000/exclude-right.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2016-12-19 00:00:00+08:00"/>
+<meta property="article:modified_time" content="2016-12-19 00:00:00+08:00"/>
+<meta property="article:author" content="http://localhost:8000/author/leon.html">
+<meta property="article:section" content="Quant"/>
+<meta property="article:tag" content="quant"/>
+<meta property="article:tag" content="stock"/>
+<meta property="og:image" content="http://localhost:8000/images/leon.png">
 
-  <title>Leon's blog &ndash;     Archives
-</title>
+  <title>Leon's blog &ndash; 股票的除权和复权</title>
 
 </head>
 <body>
   <aside>
     <div>
-      <a href="http://www.domuse.com">
-        <img src="http://www.domuse.com/images/leon.png" alt="Leon" title="Leon">
+      <a href="http://localhost:8000">
+        <img src="http://localhost:8000/images/leon.png" alt="Leon" title="Leon">
       </a>
-      <h1><a href="http://www.domuse.com">Leon</a></h1>
+      <h1><a href="http://localhost:8000">Leon</a></h1>
 
 <p>读书写字和思考的地方</p>
       <nav>
         <ul class="list">
-          <li><a href="http://www.domuse.com/pages/about.html#about">About</a></li>
+          <li><a href="http://localhost:8000/pages/about.html#about">About</a></li>
 
           <li><a href="http://sciencefan.org/" target="_blank">wiki</a></li>
         </ul>
@@ -72,53 +78,55 @@
   <main>
 
     <nav>
-      <a href="http://www.domuse.com">    Home
+      <a href="http://localhost:8000">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
-      <a href="http://www.domuse.com/feeds/all.atom.xml">    Atom
+      <a href="http://localhost:8000/feeds/all.atom.xml">    Atom
 </a>
 
     </nav>
 
 <article class="single">
   <header>
-    <h1>    Archives
-</h1>
+    <h1 id="exclude-right">股票的除权和复权</h1>
+    <p>
+          Posted on 2016-12-19 in <a href="http://localhost:8000/category/quant.html">Quant</a>
+
+
+    </p>
   </header>
+
+
   <div>
-    <dl>
-      <dt>2016-12-18</dt>
-      <dd><a href="http://www.domuse.com/quant-data.html">数据的获取和存储</a></dd>
-      <dt>2016-11-10</dt>
-      <dd><a href="http://www.domuse.com/quant-backtest.html">量化回测框架</a></dd>
-      <dt>2016-11-03</dt>
-      <dd><a href="http://www.domuse.com/learn-redis.html">Redis入门实践</a></dd>
-      <dt>2016-06-14</dt>
-      <dd><a href="http://www.domuse.com/landauer-buttiker.html">Landauer-Buttiker公式与S矩阵</a></dd>
-      <dt>2015-09-26</dt>
-      <dd><a href="http://www.domuse.com/peom-suzhou.html">旅行的诗</a></dd>
-      <dt>2015-08-25</dt>
-      <dd><a href="http://www.domuse.com/liquid-nitrogen-ice-cream.html">液氮冰淇淋制作</a></dd>
-      <dt>2015-08-24</dt>
-      <dd><a href="http://www.domuse.com/data-preview-release.html">Data Preview v0.1 released</a></dd>
-      <dt>2015-07-22</dt>
-      <dd><a href="http://www.domuse.com/is-the-world-understandable.html">不确定性与不可知论</a></dd>
-      <dt>2015-07-18</dt>
-      <dd><a href="http://www.domuse.com/unnamed-peom.html">未名的诗</a></dd>
-      <dt>2014-10-13</dt>
-      <dd><a href="http://www.domuse.com/why-physicist-need-python.html">Why physics students and physicists need python?</a></dd>
-      <dt>2014-10-11</dt>
-      <dd><a href="http://www.domuse.com/thermal-motion-concept.html">浅析热运动</a></dd>
-      <dt>2014-10-08</dt>
-      <dd><a href="http://www.domuse.com/markdown-and-latex-equation-handbook.html">Markdown语法和LaTeX数学记号速查手册</a></dd>
-      <dt>2014-10-04</dt>
-      <dd><a href="http://www.domuse.com/this-blog.html">Pelican静态博客架设</a></dd>
-    </dl>
+    
   </div>
+  <div class="tag-cloud">
+    <p>
+      <a href="http://localhost:8000/tag/quant.html">quant</a>
+      <a href="http://localhost:8000/tag/stock.html">stock</a>
+    </p>
+  </div>
+
+
+
+
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'leonpelican';
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>
+        Please enable JavaScript to view comments.
+
+</noscript>
 </article>
 
     <footer>
@@ -159,8 +167,8 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Leon's blog ",
-  "url" : "http://www.domuse.com",
-  "image": "http://www.domuse.com/images/leon.png",
+  "url" : "http://localhost:8000",
+  "image": "http://localhost:8000/images/leon.png",
   "description": ""
 }
 </script>
