--- a/pages/about.html
+++ b/pages/about.html
@@ -91,7 +91,7 @@
     <h1>欢迎来到Leon的博客!</h1>
 <p>他是物理学博士/经济学学士，喜欢游泳、旅行、电影和读书。</p>
 <p>关于域名："DoMuse = Practice + Think"</p>
-<p>联系Leon: pku09zl [@] gmail [dot] com</p>
+<p>&emsp;&emsp;联系Leon: pku09zl [@] gmail [dot] com</p>
 <hr />
 <h2>博文分类</h2>
 <ul>
@@ -103,8 +103,11 @@
 <p>翻阅博客：<a href="/archives.html">文章归档</a> <a href="/tags.html">话题标签</a></p>
 <h2>积跬步，行万里</h2>
 <p>&emsp;&emsp;——愿随着足迹，与整个世界相遇。</p>
-<p>2015年9月（上海-苏州-青岛）-&gt; 2016年3月（马里兰-华盛顿-芝加哥）-&gt; 2016年七月（欧洲六国）-&gt; 2016年11月（深圳）</p>
-<p>计划：台湾-</p>
+<ul>
+<li>2015年9月（上海-苏州-青岛）</li>
+<li>2016年3月（马里兰-华盛顿-芝加哥）-&gt; 2016年七月（欧洲六国）-&gt; 2016年11月（深圳）</li>
+<li>计划：台湾-</li>
+</ul>
 <h2>书里人生在闲庭</h2>
 <p>&emsp;&emsp;——养心莫若寡欲，至乐无如读书。</p>
 <p>近期书单：《集体智慧编程》、《数学之美》</p>
