--- a/peom-suzhou.html
+++ b/peom-suzhou.html
@@ -31,11 +31,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <meta name="author" content="Leon" />
-<meta name="description" content="题注：忽然想去旅行，于是休了假。第一站是苏州，只买到慢车卧铺票，父亲说：旅行是急不来的，路上的风景即时旅行。在去上海的途中，我问自己：干嘛不去青岛看看啊？！便取消了第三站嘉兴的行程，临时买了机票从虹桥飞到流亭。景语皆情语，得几句小诗，抄录如下。其中，我在苏州写了三首，上海一首，而在青岛只顾吃海鲜、走海滩、泡海澡、喝青啤咯" />
+<meta name="description" content="题注：忽然想去旅行，于是休了假。第一站是苏州，只买到慢车卧铺票，父亲说：旅行是急不来的，路上的风景即时旅行。在去上海的途中，我问自己：干嘛不去青岛看看啊？！便取消了第三站嘉兴的行程，临时买了机票从虹桥飞到流亭。景语皆情语，得几句小诗，抄录如下。其中，我在苏州写了三首，上海一首，而在青岛只顾吃海鲜、走海滩、泡海澡、喝青啤咯。" />
 <meta name="keywords" content="muse, essay, poetry">
 <meta property="og:site_name" content="Leon's blog"/>
 <meta property="og:title" content="旅行的诗"/>
-<meta property="og:description" content="题注：忽然想去旅行，于是休了假。第一站是苏州，只买到慢车卧铺票，父亲说：旅行是急不来的，路上的风景即时旅行。在去上海的途中，我问自己：干嘛不去青岛看看啊？！便取消了第三站嘉兴的行程，临时买了机票从虹桥飞到流亭。景语皆情语，得几句小诗，抄录如下。其中，我在苏州写了三首，上海一首，而在青岛只顾吃海鲜、走海滩、泡海澡、喝青啤咯"/>
+<meta property="og:description" content="题注：忽然想去旅行，于是休了假。第一站是苏州，只买到慢车卧铺票，父亲说：旅行是急不来的，路上的风景即时旅行。在去上海的途中，我问自己：干嘛不去青岛看看啊？！便取消了第三站嘉兴的行程，临时买了机票从虹桥飞到流亭。景语皆情语，得几句小诗，抄录如下。其中，我在苏州写了三首，上海一首，而在青岛只顾吃海鲜、走海滩、泡海澡、喝青啤咯。"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="http://www.domuse.com/peom-suzhou.html"/>
 <meta property="og:type" content="article"/>
@@ -105,10 +105,9 @@
   <div>
     
 
-<p>题注：忽然想去旅行，于是休了假。第一站是苏州，只买到慢车卧铺票，父亲说：旅行是急不来的，路上的风景即时旅行。在去上海的途中，我问自己：干嘛不去青岛看看啊？！便取消了第三站嘉兴的行程，临时买了机票从虹桥飞到流亭。景语皆情语，得几句小诗，抄录如下。其中，我在苏州写了三首，上海一首，而在青岛只顾吃海鲜、走海滩、泡海澡、喝青啤咯</p>
+<p>题注：忽然想去旅行，于是休了假。第一站是苏州，只买到慢车卧铺票，父亲说：旅行是急不来的，路上的风景即时旅行。在去上海的途中，我问自己：干嘛不去青岛看看啊？！便取消了第三站嘉兴的行程，临时买了机票从虹桥飞到流亭。景语皆情语，得几句小诗，抄录如下。其中，我在苏州写了三首，上海一首，而在青岛只顾吃海鲜、走海滩、泡海澡、喝青啤咯。</p>
 
 
-<p>。</p>
 <p><br />
 《旅行随感三首·苏州》</p>
 <p>&emsp;&emsp;朝霞出碧空，万里了无云。决眦三千丈，一览苏园林。</p>
@@ -117,7 +116,7 @@
 <p><br />
 《旅行随感一首·上海》</p>
 <p>&emsp;&emsp;登顶远望可凭栏，身处高楼不觉寒。一眼收尽万千户，亡兴苦乐才百年。</p>
-<p>PS：这首诗就不配图了，拍了绝美的东方明珠塔，但放上来有点违和，算了。其实我更想放在青岛喝的原浆啤酒 :( </p>
+<p>:( </p>
   </div>
   <div class="tag-cloud">
     <p>
