--- a/tags.html
+++ b/tags.html
@@ -91,6 +91,7 @@
   </header>
   <div>
     <ul class="list">          <li><a href="http://www.domuse.com/tag/backtest.html">backtest</a> (1)</li>
+          <li><a href="http://www.domuse.com/tag/data.html">data</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/essay.html">essay</a> (2)</li>
           <li><a href="http://www.domuse.com/tag/gui.html">GUI</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/latex.html">laTeX</a> (1)</li>
@@ -103,9 +104,10 @@
           <li><a href="http://www.domuse.com/tag/physics.html">physics</a> (5)</li>
           <li><a href="http://www.domuse.com/tag/poetry.html">poetry</a> (2)</li>
           <li><a href="http://www.domuse.com/tag/python.html">python</a> (4)</li>
-          <li><a href="http://www.domuse.com/tag/quant.html">quant</a> (1)</li>
+          <li><a href="http://www.domuse.com/tag/quant.html">quant</a> (2)</li>
           <li><a href="http://www.domuse.com/tag/redis.html">redis</a> (1)</li>
           <li><a href="http://www.domuse.com/tag/scipy.html">scipy</a> (1)</li>
+          <li><a href="http://www.domuse.com/tag/storage.html">storage</a> (1)</li>
     </ul>
   </div>
 </article>
