--- a/drafts/quantitative-investing.html
+++ b/drafts/quantitative-investing.html
@@ -31,11 +31,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <meta name="author" content="Leon" />
-<meta name="description" content="  金融对个体而言无非是套利，好处是可以优化整个社会资源的配置。定量投资不同于定性投资，其基于数理模型的判断。从哲学上讲，定性投资的思路更广，但难以做历史回测；定量化对某些投资理念建模，克服了主观判断的偏差。纵观整个市场，投资理念是不断演进和相互博弈的，所以不会有终极的模型。市场波动，人性不变，量化投资并非要用冰冷的模型去感受市场的温度，而是要消除个体的成见和情绪。   虽然我学过经济学的基本知识，但对投资还一窍不通。我不打算直接阅读量化投资的书（浩如烟海且枯燥），而是从Python数据分析和模型化着手去实践（短期内我可能介于技术分析和量化投资之间）。为什么我想发起这样一个项目呢，有几个初衷： 探究一下国外的量化投资者在干嘛，理念靠不靠谱，数学是否被滥用； 最终未必会量化建模，但可对数据进行程序化处理以减轻股票复盘的时间； 对国内市场可能出现的量化投资思潮做准备； 注：与实践（Practice）中“数值算法”和“不确定的世界”两个项目关联。 进展： I. 入门" />
+<meta name="description" content="  金融对个体而言无非是套利，好处是可以优化整个社会资源的配置。定量投资不同于定性投资，其基于数理模型的判断。从哲学上讲，定性投资的思路更广，但难以做历史回测；定量化对某些投资理念建模，克服了主观判断的偏差。纵观整个市场，投资理念是不断演进和相互博弈的，所以不会有终极的模型。市场波动，人性不变，量化投资并非要用冰冷的模型去感受市场的温度，而是要消除个体的成见和情绪。   虽然我学过经济学的基本知识，但对投资还一窍不通。我不打算直接阅读量化投资的书（浩如烟海且枯燥），而是从Python数据分析和模型化着手去实践（短期内我可能介于技术分析和量化投资之间）。为什么我想发起这样一个项目呢，有几个初衷： 探究一下国外的量化投资者在干嘛，理念靠不靠谱，数学是否被滥用； 最终未必会量化建模，但可对数据进行程序化处理以减轻股票复盘的时间； 对国内市场可能出现的量化投资思潮做准备； 注：与实践（Practice）中“数值算法”和“不确定的世界”两个项目关联。" />
 <meta name="keywords" content="finance, python, numerical">
 <meta property="og:site_name" content="Leon's blog"/>
 <meta property="og:title" content="量化投资与Python"/>
-<meta property="og:description" content="  金融对个体而言无非是套利，好处是可以优化整个社会资源的配置。定量投资不同于定性投资，其基于数理模型的判断。从哲学上讲，定性投资的思路更广，但难以做历史回测；定量化对某些投资理念建模，克服了主观判断的偏差。纵观整个市场，投资理念是不断演进和相互博弈的，所以不会有终极的模型。市场波动，人性不变，量化投资并非要用冰冷的模型去感受市场的温度，而是要消除个体的成见和情绪。   虽然我学过经济学的基本知识，但对投资还一窍不通。我不打算直接阅读量化投资的书（浩如烟海且枯燥），而是从Python数据分析和模型化着手去实践（短期内我可能介于技术分析和量化投资之间）。为什么我想发起这样一个项目呢，有几个初衷： 探究一下国外的量化投资者在干嘛，理念靠不靠谱，数学是否被滥用； 最终未必会量化建模，但可对数据进行程序化处理以减轻股票复盘的时间； 对国内市场可能出现的量化投资思潮做准备； 注：与实践（Practice）中“数值算法”和“不确定的世界”两个项目关联。 进展： I. 入门"/>
+<meta property="og:description" content="  金融对个体而言无非是套利，好处是可以优化整个社会资源的配置。定量投资不同于定性投资，其基于数理模型的判断。从哲学上讲，定性投资的思路更广，但难以做历史回测；定量化对某些投资理念建模，克服了主观判断的偏差。纵观整个市场，投资理念是不断演进和相互博弈的，所以不会有终极的模型。市场波动，人性不变，量化投资并非要用冰冷的模型去感受市场的温度，而是要消除个体的成见和情绪。   虽然我学过经济学的基本知识，但对投资还一窍不通。我不打算直接阅读量化投资的书（浩如烟海且枯燥），而是从Python数据分析和模型化着手去实践（短期内我可能介于技术分析和量化投资之间）。为什么我想发起这样一个项目呢，有几个初衷： 探究一下国外的量化投资者在干嘛，理念靠不靠谱，数学是否被滥用； 最终未必会量化建模，但可对数据进行程序化处理以减轻股票复盘的时间； 对国内市场可能出现的量化投资思潮做准备； 注：与实践（Practice）中“数值算法”和“不确定的世界”两个项目关联。"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="http://www.domuse.com/drafts/quantitative-investing.html"/>
 <meta property="og:type" content="article"/>
@@ -115,8 +115,6 @@
 <li>对国内市场可能出现的量化投资思潮做准备；</li>
 </ol>
 <p>注：与实践（Practice）中“数值算法”和“不确定的世界”两个项目关联。</p>
-<p>进展：</p>
-<p>I. 入门</p>
   </div>
   <div class="tag-cloud">
     <p>
