--- a/drafts/stock-exclude-right.html
+++ b/drafts/stock-exclude-right.html
@@ -133,8 +133,8 @@
 </pre></div>
 
 
-<p>我们得到复权涨跌幅后，可以很容易通过连乘得到后复权价格（或者直接用累计复权因子），通过连除得到前复权价格。需要注意的是，考虑不参与分配，也即分红进行重复投资，不参与配股，此时得到的收益率是真实的累计收益率。</p>
-<p>至此，我们统一了计算口径，通过累计复权因子得到后复权价格进而计算涨跌幅。</p>
+<p>我们得到复权涨跌幅后，可以很容易通过连乘得到后复权价格（或者直接用累计复权因子），通过连除得到前复权价格。需要注意的是，如果不参与分配，或者分红进行重复投资，且不参与配股，此时得到的收益率也是真实收益率。</p>
+<p>至此，我们统一了计算口径，通过累计复权因子得到后复权价格进而计算涨跌幅，也能在回测时得到较真实的收益率。</p>
   </div>
   <div class="tag-cloud">
     <p>
