--- a/is-the-world-understandable.html
+++ b/is-the-world-understandable.html
@@ -32,7 +32,7 @@
 
 <meta name="author" content="Leon" />
 <meta name="description" content="  牛顿的静态、机械的宇宙观蕴含着决定论，到拉普拉斯时为甚，他认为只要能收集到宇宙运行的足够数据，就可以预测宇宙的未来。抛开哲学思辨的探讨，决定论真正受到严肃的科学挑战是上世纪量子论的发展。量子理论的诞生不仅在科学上是一次开天辟地的大事，在哲学上也不同凡响：一方面，过去哲学中休眠的观念又有了生命活力，例如客观实在性；" />
-<meta name="keywords" content="physcics, muse">
+<meta name="keywords" content="physics, muse">
 <meta property="og:site_name" content="Leon's blog"/>
 <meta property="og:title" content="不确定性与不可知论"/>
 <meta property="og:description" content="  牛顿的静态、机械的宇宙观蕴含着决定论，到拉普拉斯时为甚，他认为只要能收集到宇宙运行的足够数据，就可以预测宇宙的未来。抛开哲学思辨的探讨，决定论真正受到严肃的科学挑战是上世纪量子论的发展。量子理论的诞生不仅在科学上是一次开天辟地的大事，在哲学上也不同凡响：一方面，过去哲学中休眠的观念又有了生命活力，例如客观实在性；"/>
@@ -43,7 +43,7 @@
 <meta property="article:modified_time" content="2015-07-24 00:00:00+08:00"/>
 <meta property="article:author" content="http://www.domuse.com/author/leon.html">
 <meta property="article:section" content="Science"/>
-<meta property="article:tag" content="physcics"/>
+<meta property="article:tag" content="physics"/>
 <meta property="article:tag" content="muse"/>
 <meta property="og:image" content="http://www.domuse.com/images/leon.png">
 
@@ -148,7 +148,7 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://www.domuse.com/tag/physcics.html">physcics</a>
+      <a href="http://www.domuse.com/tag/physics.html">physics</a>
       <a href="http://www.domuse.com/tag/muse.html">muse</a>
     </p>
   </div>
