--- a/archives.html
+++ b/archives.html
@@ -91,6 +91,8 @@
   </header>
   <div>
     <dl>
+      <dt>2016-12-21</dt>
+      <dd><a href="http://www.domuse.com/stock-exclude-right.html">除权和复权</a></dd>
       <dt>2016-12-18</dt>
       <dd><a href="http://www.domuse.com/quant-data.html">数据的获取和存储</a></dd>
       <dt>2016-11-10</dt>
